Move config templates into a config subdir and add managed-by-chef header comments

--- a/templates/default/config/asterisk.conf.erb
+++ b/templates/default/config/asterisk.conf.erb
@@ -1,3 +1,6 @@
+; This file is managed by Chef for <%= node['fqdn'] %>
+; Do NOT modify this file directly.
+
 [directories]
 astetcdir => <%= node['asterisk']['prefix']['conf'] %>/asterisk
 astmoddir => <%= node['asterisk']['prefix']['bin'] %>/lib/asterisk/modules
