--- a/templates/default/config/gtalk.conf.erb
+++ b/templates/default/config/gtalk.conf.erb
@@ -1,3 +1,6 @@
+; This file is managed by Chef for <%= node['fqdn'] %>
+; Do NOT modify this file directly.
+
 [general]
 context=google-in		; Context to dump call into
 allowguest=yes
