--- a/templates/default/config/mrcp.conf.erb
+++ b/templates/default/config/mrcp.conf.erb
@@ -1,3 +1,6 @@
+; This file is managed by Chef for <%= node['fqdn'] %>
+; Do NOT modify this file directly.
+
 [general]
 default-asr-profile = lumenvox
 default-tts-profile = lumenvox
