--- a/templates/default/config/sip.conf.erb
+++ b/templates/default/config/sip.conf.erb
@@ -1,3 +1,6 @@
+; This file is managed by Chef for <%= node['fqdn'] %>
+; Do NOT modify this file directly.
+
 [general]
 context = <%= node['asterisk']['sip']['context']  %>
 allowguest = <%= node['asterisk']['sip']['allowguest'] %>
