Manage init script

--- a/templates/default/init/default-asterisk.erb
+++ b/templates/default/init/default-asterisk.erb
@@ -1,3 +1,6 @@
+# This file is managed by Chef for <%= node['fqdn'] %>
+# Do NOT modify this file directly.
+
 # Startup configuration for the Asterisk daemon
 
 # Uncomment the following and set them to the user/groups that you
