Add support for configurable asterisk user/group, defaulting to "asterisk"

--- a/templates/default/init/default-asterisk.erb
+++ b/templates/default/init/default-asterisk.erb
@@ -8,8 +8,8 @@
 # be sure that Asterisk's environment has permission to write the
 # files required  for  its  operation, including logs, its comm
 # socket, the asterisk database, etc.
-#AST_USER="asterisk"
-#AST_GROUP="asterisk"
+AST_USER="<%= node['asterisk']['user'] %>"
+AST_GROUP="<%= node['asterisk']['group'] %>"
 
 # If you DON'T want Asterisk to start up with terminal colors, comment
 # this out.
